[package]
name        = "rush-interpreter"
default-run = "rush"
version     = "0.1.0"
edition     = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { package = "rush-parser", path = "../rush-parser" }

mod_use   = "0.2.0"
thiserror = "1.0.31"
sealed    = "0.4.0"

color-eyre = { version = "0.6.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.5"

[features]
bin = ["dep:color-eyre"]

[[bin]]
name              = "rush"
path              = "src/main.rs"
required-features = ["bin"]

[[bench]]
name    = "bench_loop"
harness = false
