[package]
name    = "rush-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest        = { version = "2.1.3", features = ["serde", "pretty-print"] }
itertools   = "0.10.3"
pest_derive = "2.1.0"
thiserror   = "1.0.31"

[dev-dependencies]
mod_use = "0.2.0"
